@@ -4,6 +4,8 @@ Build Date = @BUILDTIME@
 
 Changes in version 4.2:
  3:(2010-xx-xx)
+  FMRC xml cache lastModified needs to ignore msecs.
+  GridDatatype was adding duplicate time dimension when had coordsys runtime(time), time(time) eg FMRC best
   CF 1.5 point obs fixes
   remove dependency on gnu-regexp
  2: (2010-05-04)
